MeetForce/force-app/main/default/objects/Meetup__c/Meetup__c.object-meta.xml
<CustomObject>
    <description>An object representing individual Meetup instances and relating meetup registrations.</description>
    <label>Meetup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>