MeetForce/force-app/main/default/objects/Meetup__c/fields/NumberOfRegistrations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRegistrations__c</fullName>
    <description>Number of related registrations.</description>
    <label>Number of Registrations</label>
    <summaryForeignKey>MeetupRegistration__c.Meetup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>