MeetForce/force-app/main/default/objects/Meetup__c/fields/RegistrationCode__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCode__c</fullName>
    <description>A randomly generated code to identify a meetup in a more user-readable format.</description>
    <externalId>true</externalId>
    <label>Registration Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>