MeetForce/force-app/main/default/objects/Meetup__c/fields/RegistrationLimit__c.field-meta.xml
<CustomField>
    <fullName>RegistrationLimit__c</fullName>
    <label>Registration Limit</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>